Make sure we have no double borders between input and spinner

--- a/components/input/theme.css
+++ b/components/input/theme.css
@@ -254,7 +254,7 @@
   display: flex;
   flex-direction: column;
   height: var(--input-height-medium);
-
+  margin-left: -1px;
   width: var(--spinner-width);
 }
 
